# io-link-shield

./: CMakeLists.txt  README.md
include/: HardwareRaspberry.h  IOLGenericDevice.h  IOLMasterPort.h  IOLMasterPortMax14819.h  IOLink.h  IoddService.h  Max14819.h  ProcessdataElements.h  ShieldCommunication.h
src/: HardwareRaspberry.cpp  IOLGenericDevice.cpp  IOLMasterPort.cpp  IOLMasterPortMax14819.cpp  IoddService.cpp  Max14819.cpp  ShieldCommunication.cpp
